# varfish-server-worker

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  codecov.yml
.github/: dependabot.yml
.github/actions/install-flatbuffers/: action.yml
.github/workflows/: docker-build.yml  protobuf.yml  release-please.yml  rust.yml
misc/: ok-query-single.json  ok-query-trio.json
protos/varfish/v1/: clinvar.proto  query_seqvars.proto  sv.proto  worker.proto
protos/varfish/v1/common/: misc.proto
protos/varfish/v1/seqvars/: output.proto  query.proto
protos/varfish/v1/strucvars/: bgdb.proto  clinvar.proto
src/: common.rs  err.rs  main.rs  pbs.rs  sv_build_bgdb.rs  sv_query.rs  world.fbs
src/common/: io.rs  mod.rs  noodles.rs  s3.rs
src/common/io/: mod.rs  std.rs  tokio.rs
src/common/snapshots/: varfish_server_worker__common__noodles__test__build_tbi.snap  varfish_server_worker__common__test__build_chrom_map_snapshot.snap  varfish_server_worker__common__test__extract_pedigree_snapshot-2.snap  varfish_server_worker__common__test__extract_pedigree_snapshot.snap  varfish_server_worker__common__test__file_identifier_mappings.snap
src/db/: build.rs  compile.rs  conf.rs  inhouse.rs  mk_inhouse.rs  mod.rs  to_bin.rs
src/db/genes/: build.rs  data.rs  mod.rs  pbs.rs  query.rs
src/db/genes/snapshots/: varfish_server_worker__db__genes__data__tests__deserialize_acmg_sf_record.snap  varfish_server_worker__db__genes__data__tests__deserialize_dbnsfp_record.snap  varfish_server_worker__db__genes__data__tests__deserialize_gnomad_constraints.snap  varfish_server_worker__db__genes__data__tests__deserialize_hgnc_record.snap  varfish_server_worker__db__genes__data__tests__deserialize_ncbi_record.snap
src/db/mk_inhouse/: cli.rs  input.rs  mod.rs  output.rs
src/db/mk_inhouse/snapshots/: varfish_server_worker__db__mk_inhouse__cli__tests__run_smoke_gts_path.snap  varfish_server_worker__db__mk_inhouse__cli__tests__run_smoke_gts_twice.snap
src/db/to_bin/: cli.rs  gene_region.rs  masked.rs  xlink.rs
src/db/to_bin/clinvar/: input.rs  mod.rs
src/db/to_bin/vardbs/: input.rs  mod.rs
src/pheno/: algos.rs  mod.rs  pbs.proto3  pbs.rs  prepare.rs  prune.rs  query.rs
src/proto/varfish/v1/: clinvar.proto  gene.proto  pheno.proto  sv.proto
src/seqvars/: mod.rs
src/seqvars/aggregate/: ds.rs  mod.rs
src/seqvars/aggregate/snapshots/: varfish_server_worker__seqvars__aggregate__ds__test__carrier_list-2.snap  varfish_server_worker__seqvars__aggregate__ds__test__carrier_list.snap  varfish_server_worker__seqvars__aggregate__ds__test__counts-2.snap  varfish_server_worker__seqvars__aggregate__ds__test__counts.snap  varfish_server_worker__seqvars__aggregate__test__extract_pedigree.snap  (+6 more)
src/seqvars/ingest/: header.rs  mod.rs
src/seqvars/prefilter/: mod.rs
src/seqvars/query/: annonars.rs  hpo.rs  interpreter.rs  mod.rs  output.rs  schema.rs  sorting.rs
src/seqvars/query/interpreter/: clinvar.rs  consequences.rs  (+6 more)
src/server/: annos.rs  data.proto3  data.rs  genes.rs  mod.rs  pheno.rs  pheno_cli.rs  pheno_prepare.rs  rest.rs
src/server/rest/: actix_server.rs  mod.rs
src/snapshots/: varfish_server_worker__common__test__build_chrom_map_snapshot.snap  varfish_server_worker__common__test__extract_pedigree_snapshot-2.snap  varfish_server_worker__common__test__extract_pedigree_snapshot.snap  varfish_server_worker__common__test__open_write_maybe_gz-2.snap  varfish_server_worker__common__test__open_write_maybe_gz_plain.snap  varfish_server_worker__common__test__read_lines.snap
src/strucvars/: mod.rs  pbs.rs
src/strucvars/aggregate/: cli.rs  mod.rs  output.rs
src/strucvars/ingest/: header.rs  mod.rs
src/strucvars/query/: bgdbs.rs  clinvar.rs  genes.rs  interpreter.rs  masked.rs  mod.rs  pathogenic.rs  records.rs  schema.rs  tads.rs
src/strucvars/txt_to_bin/: cli.rs  gene_region.rs  masked.rs  mod.rs  xlink.rs
src/sv/: bg_db_to_bin.rs  build_bgdb.rs  build_inhouse_db.rs  clinvar_sv_to_bin.rs  conf.rs  convert_bgdb.rs  gene_region_to_bin.rs  inhouse_db_build.rs  mod.rs  query.rs  query_next.rs  xlink_to_bin.rs
src/sv/bg_db_build/: recordio.rs
src/sv/query/: bgdbs.rs  clinvar.rs  genes.rs  interpreter.rs  masked.rs  mod.rs  pathogenic.rs  records.rs  schema.rs  tads.rs
src/sv/query_next/: bgdbs.rs  interpreter.rs  records.rs  schema.rs
src/sv_build_bgdb/: recordio.rs
src/sv_query/: dbrecords.rs  interpreter.rs  recordio.rs  schema.rs
tests/common/: .gitattributes  test.md5
tests/db/conf/: default.toml
tests/db/hpo/: hp.obo  phenotype.hpoa  phenotype_to_genes.txt
tests/db/mk-inhouse/: default.toml  list.txt  oneline.gts.tsv
tests/seqvars/aggregate/: ingest.vcf
tests/seqvars/ingest/: Case_1.custom_id.ped  Case_1.ped  Case_1.vcf  NA12878_dragen.custom_id.ped  NA12878_dragen.ped  NA12878_dragen.vcf  NA12878_dragen.vcf.gz.tbi  clair3_glnexus.ped  clair3_glnexus.vcf  example_dragen.07.021.624.3.10.4.ped  example_dragen.07.021.624.3.10.4.vcf  example_dragen.07.021.624.3.10.9.vcf  example_gatk_hc.3.7-0.ped  example_gatk_hc.3.7-0.vcf  example_gatk_hc.4.4.0.0.ped  example_gatk_hc.4.4.0.0.vcf
tests/seqvars/prefilter/: ingest.vcf
tests/seqvars/query/: Case_1.ingested.vcf  Case_1.query.json  Case_1.query.json.bak  db  dragen.ingested.vcf  dragen.query.json  empty-pb.json  empty.json  full-pb.json  full.json  with_extra.json
tests/strucvars/aggregate/: list.txt  oneline.vcf
tests/strucvars/ingest/: delly2-min.vcf  delly2-min.vcf.gz.tbi  dragen-cnv-min.custom_id.ped  dragen-cnv-min.vcf.gz.tbi  dragen-sv-min.vcf.gz.tbi  gcnv-min.vcf  gcnv-min.vcf.gz.tbi  manta-min.vcf.gz.tbi  melt-min.ped  melt-min.vcf  melt-min.vcf.gz.tbi  popdel-min.vcf  popdel-min.vcf.gz.tbi  sniffles2-min.vcf  sniffles2-min.vcf.gz.tbi
tests/strucvars/query/: Case_3.ingested.vcf  Case_3.query.json  bootstrap.sh
tests/sv/build_inhouse_db/: input.tsv
tests/sv/conf/: full.toml  minimal.toml
tests/sv/convert_bgdb/: input.tsv
utils/: install-protoc.sh
utils/docker/: Dockerfile  build-docker.sh  entrypoint.sh
utils/terraform/: main.tf
(+610 files in other folders)
