[package]
name = "varfish-server-worker"
version = "0.7.1"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Rust-based workers for varfish-server"
license = "MIT"
homepage = "https://github.com/bihealth/varfish-server-workers"
edition = "2021"
readme = "README.md"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.3"
annonars = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
base16ct = "0.2"
bgzip = "0.3"
bio = "1.1"
byte-unit = "4.0"
chrono = { version = "0.4", features = ["serde"] }
clap-verbosity-flag = "2.0"
clap = { version = "4.1", features = ["derive", "help"] }
console = "0.15"
csv = "1.1"
derive_more = "0.99"
enum-map = { version = "2.4", features = ["serde"] }
env_logger = "0.10"
fastrand = "1.9"
flate2 = "1.0"
hgvs = "0.8"
hpo = "0.8"
indexmap = { version = "1.9", features = ["serde"] }
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.10"
lazy_static = "1.4"
linked-hash-map = { version = "0.5", features = ["serde", "serde_impl"] }
log = "0.4"
md-5 = "0.10"
multimap = "0.9"
noodles-bgzf = "0.22"
noodles-core = "0.11"
noodles-csi = "0.19"
noodles-tabix = "0.22"
noodles-vcf = "0.31"
procfs = "0.15"
prost = "0.11"
rayon = "1.7"
regex = "1.7"
result = "1.0"
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
serde_json = "1.0"
serde-jsonlines = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
serde_with = "3.0"
sha2 = "0.10"
shellexpand = "3.0"
strum = "0.24"
strum_macros = "0.24"
tempdir = "0.3"
thiserror = "1.0"
thousands = "0.2"
toml = { version = "0.7", features = ["preserve_order", "parse", "display"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
file_diff = "1.0"
insta = { version = "1.29", features = ["yaml"] }
pretty_assertions = "1.3"
serde_test = "1.0"
temp_testdir = "0.2"

[[bin]]
name = "varfish-server-worker"
path = "src/main.rs"
