[package]
name = "varfish-server-worker"
version = "0.12.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Rust-based worker for varfish-server"
license = "MIT"
repository = "https://github.com/bihealth/varfish-server-worker"
edition = "2021"
readme = "README.md"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annonars = "0.40"
anyhow = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
aws-sdk-s3 = { version = "1.43", features = ["behavior-version-latest"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
base16ct = "0.2"
bio = "2.0"
biocommons-bioutils = "0.1"
byteorder = { version = "1.5", features = ["i128"] }
bytesize = "1.3"
byte-unit = "5.0"
chrono = { version = "0.4", features = ["serde"] }
clap-verbosity-flag = "2.2"
clap = { version = "4.5", features = ["derive", "help"] }
console = "0.15"
csv = "1.1"
derive_builder = { version = "0.20", features = ["clippy"] }
derive-new = "0.6.0"
enum-map = { version = "2.7", features = ["serde"] }
ext-sort = { version = "0.1", features = ["memory-limit", "bytesize"] }
fastrand = "2.0"
flate2 = "1.0"
futures = "0.3.30"
hgvs = "0.17"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.13"
log = "0.4"
mehari = "0.26.0"
multimap = "0.10"
pbjson = "0.7"
pbjson-types = "0.7"
procfs = "0.16"
prost = "0.13.1"
rand = "0.8"
rand_core = "0.6"
rayon = "1.10"
regex = "1.10"
rocksdb-utils-lookup = "0.4"
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_with = { version = "3.8", features = ["indexmap_2"] }
shellexpand = "3.0"
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0"
thousands = "0.2"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }

[dependencies.noodles]
version = "0.77.0"
features = ["bgzf", "core", "csi", "tabix", "vcf", "bcf"]


[build-dependencies]
anyhow = "1.0"
prost-build = "0.13"
pbjson-build = "0.7.0"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
file_diff = "1.0"
float-cmp = "0.9"
hxdmp = "0.2.1"
insta = { version = "1.36", features = ["yaml"] }
pretty_assertions = "1.4"
rstest = "0.22.0"
serde_test = "1.0"
temp_testdir = "0.2"
tracing-test = "0.2"

[[bin]]
name = "varfish-server-worker"
path = "src/main.rs"
